# llmst

embeddings/: .gitignore  pyproject.toml
embeddings/embeddings/: paraphrase_minilm_l6_v2.py
