[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonfeitosa@goiania.go.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^3.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
